# mazonic

./: .gitignore  Cargo.toml  README.md  flake.nix  index.html
android/: Cargo.toml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/src/: lib.rs
app/assets/: marimba_chiapaneca.sf2
app/assets/levels/: cube_s0_n5.json  cube_s0_n7.json  cube_s1_n6.json  cube_s2_n2.json  cube_s3_n4.json  dodecahedron_s1_n1.json  icosahedron_s0_n5.json  icosahedron_s2_n2.json  icosahedron_s2_n3.json  icosahedron_s2_n4.json  octahedron_s0_n5.json  octahedron_s0_n6.json  octahedron_s0_n7.json  octahedron_s3_n3.json  octahedron_s4_n4.json  tetrahedron_s0_n6.json  tetrahedron_s0_n7.json  tetrahedron_s0_n8.json  tetrahedron_s0_n9.json  tetrahedron_s1_n1.json  tetrahedron_s2_n5.json
app/assets/shaders/: dashed_line.wgsl  face_material.wgsl  pulsing.wgsl  pulsing_dashed_line.wgsl
app/src/: main.rs
art/: istockphoto-1495927758-1024x1024.aseprite  level_symbols.aseprite
common/: Cargo.toml
common/src/: camera.rs  constants.rs  controller.rs  controller_screen_position.rs  game_save.rs  game_state.rs  game_systems.rs  is_room_junction.rs  level_selector.rs  levels.rs  lib.rs  light.rs  load_level_asset.rs  menu.rs  play_statistics.rs  player.rs  player_path.rs  room.rs  sound.rs  victory.rs
common/src/assets/: material_handles.rs  mesh_generators.rs  mod.rs
common/src/effects/: musical_note_burst.rs  musical_notes.rs  node_arrival.rs  player_particles.rs
common/src/maze/: maze_mesh_builder.rs  mesh.rs
common/src/shape/: cube.rs  dodecahedron.rs  icosahedron.rs  loader.rs  mod.rs  octahedron.rs  tetrahedron.rs
common/src/ui/: message.rs  mod.rs  navigation.rs
desktop/: Cargo.toml
desktop/assets/levels/: 0.json  1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json  cube_s0_n5.json  cube_s0_n7.json  icosahedron_s0_n5.json  icosahedron_s2_n2.json  octahedron_s0_n5.json  octahedron_s0_n7.json  tetrahedron_s0_n9.json  tetrahedron_s1_n1.json
desktop/assets/shaders/: dashed_line.wgsl  pulsing.wgsl  selection_hover.wgsl  ui_flash.wgsl
desktop/src/: main.rs
docs/: index.html
game/: Cargo.toml
game/src/: assets.rs  camera.rs  constants.rs  controller.rs  effects.rs  game_save.rs  game_settings.rs  game_state.rs  game_systems.rs  is_room_junction.rs  level_selector.rs  levels.rs  lib.rs  light.rs  materials.rs  menu.rs  player.rs  room.rs  sound.rs  statistics.rs  ui.rs  victory.rs
game/src/assets/: material_handles.rs  materials.rs  mesh_generators.rs  mesh_handles.rs  mod.rs  shaders.rs
game/src/effects/: mod.rs  musical_note_burst.rs  musical_notes.rs  node_arrival.rs
game/src/maze/: border_type.rs  maze_mesh_builder.rs  mesh.rs  mod.rs
game/src/shape/: cube.rs  dodecahedron.rs  icosahedron.rs  loader.rs  mod.rs  octahedron.rs  platonic_mesh_builder.rs  shape_loader.rs  shape_utils.rs  tetrahedron.rs  triangle_face_generator.rs
game/src/ui/: complete_level.rs  mod.rs  navigation.rs
levels/: icosahedron_s2_n2.json
mazonic_android/: Cargo.toml  local.properties  settings.gradle
mazonic_android/app/src/main/: AndroidManifest.xml
mazonic_android/app/src/main/java/org/hallayus/mazonic_android/: MainActivity.java
mazonic_android/src/: lib.rs
src/: camera.rs  controller.rs  cube_maze_factory.rs  game_settings.rs  game_state.rs  game_systems.rs  main.rs  model.rs  player.rs  statistics.rs  ui.rs
src/shape/: cube.rs  dodecahedron.rs  icosahedron.rs  loader.rs  mod.rs  octahedron.rs  platonic_mesh_builder.rs  platonic_solid.rs  spawn.rs  tetrahedron.rs
src/shape/cube/: maze.rs  (+2 more)
web/: desktop.d.ts  desktop.js  desktop_bg.wasm.d.ts  index.html  mazonic.d.ts  mazonic.js  mazonic_bg.wasm.d.ts
(+33 files in other folders)
