[package]
name = "mazonic"
version = "0.1.0"
edition = "2021"

[dependencies]
petgraph = "^0.6.5"
itertools = "0.13.0"
strum = "0.26.3"
strum_macros = "0.26.4"
layout-rs = "0.1.2"
rand = "0.8.5"
rand_chacha = "0.3.1"
bevy = { version = "0.15.0", features = ["dynamic_linking", "bevy_dev_tools"] }
bevy_rapier3d = { version = "0.28.0", features = [ "wasm-bindgen" ] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
noisy_bevy = "0.8.0"
bevy_common_assets = { version = "0.12.0", features = ["json"] }
bevy_rustysynth = "0.3.0"
sha2 = "0.10.8"
chacha20poly1305 = "0.10.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

